0x07-python-test_driven_development/tests/3-say_my_name.txt
=================================================
Doctest for module `3-say_my_name.py'
=================================================
The module contains a function that prints 'My name is <first name> <last name>'
Two argument has to be passed to it
	first_name(str): The first name of user
	last_name(str, optional): The last name of user
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Import module
----------------------
	>>> say_name = __import__('3-say_my_name').say_my_name

Checks for missing argument
-------------------------------
	>>> say_name()
	Traceback (most recent call last):
		...
	TypeError: say_my_name() missing 1 required positional argument: 'first_name'

	>>> say_name(last_name="Segun")
	Traceback (most recent call last):
		...
	TypeError: say_my_name() missing 1 required positional argument: 'first_name'

	>>> say_name("Wale")
	My name is Wale 

check for argument correct type
-----------------------------------
	>>> say_name(4, "Segun")
	Traceback (most recent call last):
		...
	TypeError: first_name must be a string

	>>> say_name(4, 6)
	Traceback (most recent call last):
		...
	TypeError: first_name must be a string

	>>> say_name("Segun", 4)
	Traceback (most recent call last):
		...
	TypeError: last_name must be a string

	>>> say_name("Wale", "Segun")
	My name is Wale Segun

	
